fix adding assertion to request

--- a/tests/project/templates/base.html
+++ b/tests/project/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
       <title>{% block title %}TestRecorder{% endblock %}</title>
+      <link rel="stylesheet" href="{{ MEDIA_URL }}css/base.css"/>
       <meta charset="utf-8" />
       {% block head %}{% endblock %}
     </head>
